    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_height="fill_parent" 
                  android:layout_width="fill_parent" 
                  android:orientation="vertical"
                  android:padding="5dp">
		<TextView android:layout_height="wrap_content" 
                  android:textAppearance="?android:attr/textAppearanceLarge"
                  android:layout_width="wrap_content"
                  android:id="@+id/cpu_processor_title" 
                  android:text="@string/misc_processor_num_title" />
		<TextView android:layout_height="wrap_content" 
                  android:textAppearance="?android:attr/textAppearanceMedium" 
                  android:layout_width="wrap_content" 
                  android:id="@+id/cpu_processor_freq_max_title" 
                  android:text="@string/misc_processor_freq_max_title" />
        <SeekBar android:layout_height="wrap_content" 
                  android:layout_width="match_parent" 
                  android:id="@+id/cpu_detail_max_value" />
        <TextView android:layout_height="wrap_content" 
                  android:textAppearance="?android:attr/textAppearanceMedium" 
                  android:layout_width="wrap_content" 
                  android:id="@+id/cpu_processor_freq_min_title" 
                  android:text="@string/misc_processor_freq_min_title" />
        <SeekBar android:layout_height="wrap_content" 
                 android:layout_width="match_parent" 
                 android:id="@+id/cpu_detail_min_value"/>
        <TextView android:layout_height="wrap_content" 
                  android:textAppearance="?android:attr/textAppearanceMedium" 
                  android:layout_width="wrap_content" 
                  android:text="@string/misc_processor_gov_title" />
        <Spinner android:layout_height="wrap_content" 
                 android:layout_width="match_parent" 
                 android:id="@+id/cpu_detail_gov_value" />
    </LinearLayout>
