<ScrollView android:orientation="vertical" 
            android:layout_width="fill_parent" 
            android:layout_height="fill_parent" 
			xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout android:orientation="vertical" 
            android:layout_width="fill_parent" 
            android:layout_height="fill_parent">
    <LinearLayout android:layout_width="match_parent" 
                  android:layout_height="wrap_content" >
        <ImageView android:layout_width="wrap_content"
                   android:src="@drawable/appdefault" 
                   android:layout_height="wrap_content" 
                   android:id="@+id/process_detail_image" />
        <TextView android:padding="3dip" 
                  android:textColor="?android:attr/textColorSecondary" 
                  android:id="@+id/process_name_value"
                  android:gravity="left" 
                  android:textAppearance="?android:attr/textAppearanceLarge" 
                  android:layout_width="match_parent" 
                  android:layout_height="match_parent" />
    </LinearLayout>
    <TextView android:gravity="center" 
    		  android:layout_height="wrap_content" 
    		  android:layout_width="match_parent" 
    		  android:background="#80993366" 
    		  android:padding="3dip" 
    		  android:textColor="?android:attr/textColorSecondary" 
    		  android:textAppearance="?android:attr/textAppearanceMedium" 
    		  android:text="@string/process_info_title" />
    <LinearLayout android:layout_width="match_parent" 
                  android:orientation="vertical" 
                  android:layout_height="fill_parent">
        <TableLayout android:layout_width="match_parent" 
                     android:layout_height="match_parent"
                     android:layout_weight="1" >
            <TableRow android:layout_height="wrap_content" 
                      android:layout_width="wrap_content" 
                      android:background="#80444444" 
                      android:layout_margin="2dip" >
                <TextView android:layout_height="wrap_content" 
                          android:layout_width="wrap_content" 
                          android:padding="3dip" 
                          android:text="@string/process_package_title" 
                          android:textColor="?android:attr/textColorSecondary" 
                          android:textAppearance="?android:attr/textAppearanceMedium" />
                <TextView android:layout_width="wrap_content" 
                          android:padding="3dip" 
                          android:textColor="?android:attr/textColorSecondary" 
                          android:id="@+id/process_package_value" 
                          android:textAppearance="?android:attr/textAppearanceMedium"
                          android:layout_height="wrap_content" />
            </TableRow>
            <TableRow android:layout_height="wrap_content"
                      android:layout_width="wrap_content" 
                      android:background="#80444444" 
                      android:layout_margin="2dip" >
                <TextView android:padding="3dip" 
                		  android:text="@string/process_uid_title" 
                		  android:textColor="?android:attr/textColorSecondary" 
                		  android:textAppearance="?android:attr/textAppearanceMedium" 
                		  android:layout_width="wrap_content" 
                		  android:layout_height="wrap_content" />
                <TextView android:id="@+id/process_uid_value"
                          android:textAppearance="?android:attr/textAppearanceMedium"
            			  android:textColor="?android:attr/textColorSecondary" 
                          android:layout_width="wrap_content" 
                          android:layout_height="wrap_content" 
                          android:padding="3dip" />
            </TableRow>
            <TableRow android:layout_height="wrap_content"
                      android:layout_width="wrap_content" 
                      android:background="#80444444" 
                      android:layout_margin="2dip" >
                <TextView android:padding="3dip" 
                		  android:text="@string/process_pid_title" 
                		  android:textColor="?android:attr/textColorSecondary" 
                		  android:textAppearance="?android:attr/textAppearanceMedium" 
                		  android:layout_width="wrap_content" 
                		  android:layout_height="wrap_content" />
                <TextView android:id="@+id/process_pid_value"
                          android:textAppearance="?android:attr/textAppearanceMedium"
            			  android:textColor="?android:attr/textColorSecondary" 
                          android:layout_width="wrap_content" 
                          android:layout_height="wrap_content" 
                          android:padding="3dip" />
            </TableRow>
            <TableRow android:layout_height="wrap_content" 
                      android:layout_width="wrap_content" 
                      android:background="#80444444" 
                      android:layout_margin="2dip" >
                <TextView android:text="@string/process_nice_title" 
                          android:textAppearance="?android:attr/textAppearanceMedium"
            			  android:textColor="?android:attr/textColorSecondary" 
                          android:layout_height="wrap_content" 
                          android:layout_width="wrap_content" 
                          android:padding="3dip" />
                <TextView android:id="@+id/process_nice_value"
                          android:textAppearance="?android:attr/textAppearanceMedium"
            			  android:textColor="?android:attr/textColorSecondary" 
                          android:layout_width="wrap_content" 
                          android:layout_height="wrap_content" 
                          android:padding="3dip" />
            </TableRow>
            <TableRow android:layout_height="wrap_content" 
                      android:layout_width="wrap_content" 
                      android:background="#80444444" 
                      android:layout_margin="2dip" >
                <TextView android:text="@string/process_threads_title"
                          android:textAppearance="?android:attr/textAppearanceMedium"
            			  android:textColor="?android:attr/textColorSecondary" 
                          android:layout_height="wrap_content" 
                          android:layout_width="wrap_content" 
                          android:padding="3dip" />
                <TextView android:id="@+id/process_threads_value"
                          android:textAppearance="?android:attr/textAppearanceMedium"
            			  android:textColor="?android:attr/textColorSecondary" 
                          android:layout_width="wrap_content" 
                          android:layout_height="wrap_content" 
                          android:padding="3dip" />
            </TableRow>
            <TableRow android:layout_height="wrap_content" 
                      android:layout_width="wrap_content" 
                      android:background="#80444444"
                      android:layout_margin="2dip" >
                <TextView android:text="@string/process_memoryrss_title" 
                          android:textAppearance="?android:attr/textAppearanceMedium"
            			  android:textColor="?android:attr/textColorSecondary" 
                          android:layout_height="wrap_content" 
                          android:layout_width="wrap_content" 
                          android:padding="3dip" />
                <TextView android:id="@+id/process_memoryrss_value"
                          android:textAppearance="?android:attr/textAppearanceMedium"
            			  android:textColor="?android:attr/textColorSecondary" 
                          android:layout_width="wrap_content" 
                          android:layout_height="wrap_content" 
                          android:padding="3dip" />
            </TableRow>
            <TableRow android:layout_height="wrap_content" 
                      android:layout_width="wrap_content" 
                      android:background="#80444444"
                      android:layout_margin="2dip" >
                <TextView android:text="@string/process_memorypss_title" 
                          android:textAppearance="?android:attr/textAppearanceMedium"
            			  android:textColor="?android:attr/textColorSecondary" 
                          android:layout_height="wrap_content" 
                          android:layout_width="wrap_content" 
                          android:padding="3dip" />
                <TextView android:id="@+id/process_memorypss_value"
                          android:textAppearance="?android:attr/textAppearanceMedium"
            			  android:textColor="?android:attr/textColorSecondary" 
                          android:layout_width="wrap_content" 
                          android:layout_height="wrap_content" 
                          android:padding="3dip" />
            </TableRow>
            <TableRow android:layout_height="wrap_content" 
                      android:layout_width="wrap_content" 
                      android:background="#80444444" 
                      android:layout_margin="2dip" >
                <TextView android:text="@string/process_time_title"
                          android:textAppearance="?android:attr/textAppearanceMedium"
            			  android:textColor="?android:attr/textColorSecondary" 
                		  android:layout_height="wrap_content" 
                		  android:layout_width="wrap_content" 
                		  android:padding="3dip" />
                <TextView android:id="@+id/process_time_value" 
                          android:textAppearance="?android:attr/textAppearanceMedium"
            			  android:textColor="?android:attr/textColorSecondary" 
                          android:layout_width="wrap_content" 
                          android:layout_height="wrap_content" 
                          android:padding="3dip" />
            </TableRow>
            <TableRow android:layout_height="wrap_content" 
                      android:layout_width="wrap_content" 
                      android:background="#80444444" 
                      android:layout_margin="2dip" >
                <TextView android:text="@string/process_utime_title"
                          android:textAppearance="?android:attr/textAppearanceMedium"
            			  android:textColor="?android:attr/textColorSecondary" 
                		  android:layout_height="wrap_content" 
                		  android:layout_width="wrap_content" 
                		  android:padding="3dip" />
                <TextView android:id="@+id/process_utime_value" 
                          android:textAppearance="?android:attr/textAppearanceMedium"
            			  android:textColor="?android:attr/textColorSecondary" 
                          android:layout_width="wrap_content" 
                          android:layout_height="wrap_content" 
                          android:padding="3dip" />
            </TableRow>
            <TableRow android:layout_height="wrap_content" 
                      android:layout_width="wrap_content" 
                      android:background="#80444444"
                      android:layout_margin="2dip" >
                <TextView android:text="@string/process_stime_title"
                          android:textAppearance="?android:attr/textAppearanceMedium"
            			  android:textColor="?android:attr/textColorSecondary" 
                          android:layout_height="wrap_content" 
                          android:layout_width="wrap_content" 
                          android:padding="3dip" />
                <TextView android:id="@+id/process_stime_value"
                          android:textAppearance="?android:attr/textAppearanceMedium"
            			  android:textColor="?android:attr/textColorSecondary" 
                          android:layout_width="wrap_content" 
                          android:layout_height="wrap_content" 
                          android:padding="3dip" />
            </TableRow>
            <TableRow android:layout_height="wrap_content" 
                      android:layout_width="wrap_content" 
                      android:background="#80444444" 
                      android:layout_margin="2dip" >
                <TextView android:text="@string/process_status_title"
                          android:textAppearance="?android:attr/textAppearanceMedium"
            			  android:textColor="?android:attr/textColorSecondary" 
                          android:layout_height="wrap_content" 
                          android:layout_width="wrap_content" 
                          android:padding="3dip" />
                <TextView android:id="@+id/process_status_value" 
                          android:textAppearance="?android:attr/textAppearanceMedium"
            			  android:textColor="?android:attr/textColorSecondary" 
                          android:layout_width="wrap_content" 
                          android:layout_height="wrap_content" 
                          android:padding="3dip" />
            </TableRow>
        </TableLayout>
        <TableLayout android:layout_height="wrap_content" 
                     android:layout_width="match_parent"  
                     android:stretchColumns="*">
        	<TableRow android:layout_width="match_parent" 
        	          android:layout_height="wrap_content">
            	<Button android:layout_height="wrap_content" 
            	        android:id="@+id/process_switch_button" 
            	        android:text="@string/process_switch_title" 
            	        android:layout_width="match_parent" />
            	<Button android:layout_width="match_parent" 
            	        android:layout_height="wrap_content" 
            	        android:text="@string/process_log_title" 
            	        android:id="@+id/process_log_button" />
            	<Button android:layout_height="wrap_content" 
            	        android:id="@+id/process_kill_button" 
            	        android:text="@string/process_kill_title" 
            	        android:layout_width="match_parent" />
            	<Button android:layout_height="wrap_content" 
            	        android:id="@+id/process_nice_button" 
            	        android:text="@string/process_nice_title" 
            	        android:layout_width="match_parent" />
        	</TableRow>
        </TableLayout>
    </LinearLayout>
</LinearLayout>        
</ScrollView>