<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent" android:gravity="right">
    
    <FrameLayout
        android:layout_width="fill_parent" 
        android:layout_height="0dip"
        android:layout_weight="1" >
  
        <ListView android:id="@+id/loglist"
            android:layout_width="fill_parent" 
            android:layout_height="fill_parent"
            android:fastScrollEnabled="true"
            android:smoothScrollbar="true"
            android:drawSelectorOnTop="false"/>
        
        <TextView android:id="@+id/debugempty"
            android:layout_width="fill_parent" 
            android:layout_height="fill_parent" 
            android:text=""/>
            
    </FrameLayout>        
    <TableLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:stretchColumns="0,1,2">
        
        <TableRow>
			<Button android:text="@string/logcat_type_linux_title"
				    android:id="@+id/logtypebutton"
				   	android:textAppearance="?android:attr/textAppearanceMedium"
			        style="?android:attr/buttonStyleSmall"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"/>
				    
			<Button android:text="@string/logcat_expert_title" 
			        android:id="@+id/filterbybutton" 
				   	android:textAppearance="?android:attr/textAppearanceMedium"
			        style="?android:attr/buttonStyleSmall"
			        android:layout_width="wrap_content" 
			        android:layout_height="wrap_content" />

			<TextView android:padding="3dip" 
			          android:layout_width="wrap_content" 
			          android:text="@string/logcat_count_title" 
			          android:gravity="right" 
			          android:layout_height="wrap_content" />

			<TextView android:text="" 
					  android:id="@+id/debugmsgcounts" 
					  android:layout_height="wrap_content"
					  android:gravity="right"
					  android:padding="3dip"/>
					  
		</TableRow>
	</TableLayout>
</LinearLayout>